--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,25 +5,42 @@ input, textarea, select, label {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+html {
+    width: 100%;
+    height: 100%;
+    background-image: -webkit-linear-gradient(#23d1ff, #9df9ff);
+    background-image: -moz-linear-gradient(#23d1ff, #9df9ff);
+    background-image: -o-linear-gradient(#23d1ff, #9df9ff);
+    background-image: linear-gradient(#23d1ff, #9df9ff);
+    z-index: 0;
+    /*background-image: linear-gradient(to bottom, #23d1ff, #9df9ff);*/
+}
 
 body {
-    font: 12px/20px 'Lucida Grande', Verdana, sans-serif;
-    color: #404040;
-    background: #ebc9a2;
+    position: absolute;
+    top:0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    
+    background:  url("../images/cloud.png") no-repeat;
+    z-index: 1;
 }
 .loginform {
     margin: 220px auto;
     padding: 18px 20px;
     width: 400px;
-    background: #3f65b7;
+    font: 12px/20px 'Lucida Grande', Verdana, "Microsoft YaHei", sans-serif;
+    color: #fff;
+    /*background: #3f65b7;*/
     background-clip: padding-box; /*背景被裁剪到边框盒。*/
-    border: 1px solid #172b4e;
+    border: 1px solid #133463;
     border-bottom-color: #142647;
     border-radius: 5px;
-    background-image: -webkit-radial-gradient(cover, #437dd6, #3960a6); /*全覆盖，从#437dd6 过度到 #3960a6*/
-    background-image: -moz-radial-gradient(cover, #437dd6, #3960a6);
-    background-image: -o-radial-gradient(cover, #437dd6, #3960a6);
-    background-image: radial-gradient(cover, #437dd6, #3960a6);
+    background-image: -webkit-linear-gradient(#4bcaff, #0090ff); /*全覆盖，从#437dd6 过度到 #3960a6*/
+    background-image: -moz-linear-gradient(#4bcaff, #0090ff);
+    background-image: -o-linear-gradient(#4bcaff, #0090ff);
+    background-image: linear-gradient(#4bcaff, #0090ff);
     -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 0 1px 1px rgba(255, 255, 255, 0.1), 0 2px 10px rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 0 1px 1px rgba(255, 255, 255, 0.1), 0 2px 10px rgba(0, 0, 0, 0.5);
 }
@@ -44,23 +61,23 @@ body {
     font-size: 20px;
     margin-bottom: 20px;
     padding: 0 9px;
-    color: white;
-    text-shadow: 0 1px black;
-    background: #2b3e5d;
+    color: black;
+    /*text-shadow: 0 1px #74909f;*/
+    background: #fff;
     border: 1px solid #15243b;
     border-top-color: #0d1827;
     border-radius: 4px;
-    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
+    /*background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
     background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
     background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));*/
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.2);
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.2);
 }
 
 .login-input:focus {
     outline: 0;
-    background-color: #32486d;
+    /*background-color: #32486d;*/
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 4px 1px rgba(255, 255, 255, 0.6);
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 4px 1px rgba(255, 255, 255, 0.6);
 }
